teste configuração de permissões